# wally-registry-list

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.cursor/hooks/state/: continual-learning.json
src/wally_registry_list/: __init__.py  __main__.py  cache.py  config.py  index_fetcher.py  index_parser.py  models.py  urls.py
src/wally_registry_list/gui/: __init__.py  app.py  detail_panel.py  package_list.py
